--- a/src/components/CardIcons/CardIcons.css
+++ b/src/components/CardIcons/CardIcons.css
@@ -1,3 +1,31 @@
-section{
-    background: lightblue;
+
+
+.logo{ 
+    margin-top: 5%;
+    margin-left: 5%;
+    width: 8%;
+    height: 8%;
 }
+
+.secondimg {
+    margin-top: 5%;
+    margin-left: 0%;
+    width: 9%;
+    height: 9%;
+    align-items: left;
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+}
+
+h1{ 
+    padding: 1%;
+    margin-left: 22%;
+    margin-top: -14.5%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+
+
