--- a/src/components/CardIcons/CardIcons.css
+++ b/src/components/CardIcons/CardIcons.css
@@ -19,6 +19,7 @@
 }
 
 h1{ 
+    font-family: "Helvetica", Arial, sans-serif;
     padding: 1%;
     margin-left: 22%;
     margin-top: -14.5%;
@@ -26,6 +27,21 @@ h1{
     flex-direction: column;
     color: white;
 }
+
+@media (max-width: 400px) {
+    .leftside {
+      display: none;
+    }
+
+    .secondimg{
+        display: none;
+    }
+
+    .logo{
+        display: none;
+    }
+
+  }
 
 
 
