--- a/src/components/CardUploade/CardUploade.css
+++ b/src/components/CardUploade/CardUploade.css
@@ -1,9 +1,15 @@
 
 
+
 .card{
+    
     background-color: white;
+    width: 75%;
     margin-top: 10%;
     margin-right: 20%;
+    margin-left: 12%;
+    align-items: center;
+    justify-content: center;
     border-radius: 4%;
     align-items: center;
 }
@@ -16,18 +22,21 @@
 }
 
 h1{
+    font-family: "Helvetica", Arial, sans-serif;
     margin-top: -12%;
     margin-left: 29%;
     font-size: larger;
 }
 
 h3{
+    font-family: "Helvetica", Arial, sans-serif;
     margin-top: -2%;
     margin-left: 28%;
     color: gray;
 }
 
 p{
+    font-family: "Helvetica", Arial, sans-serif;
     width: 70%;
     margin-left: 13.5%;
     margin-top: 6%;
@@ -60,3 +69,76 @@ p{
 
     
 }
+
+@media (max-width: 400px) {
+
+    .card{
+        background-color: white;
+        width: 75%;
+        margin-top: 10%;
+        margin-right: 20%;
+        margin-left: 12%;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4%;
+        align-items: center;
+    }
+    
+    .phoper {
+        width: 50px;
+        height: 50px;
+        margin-left: 13%;
+        margin-top: 5%;
+    }
+    
+    h1{
+        font-family: "Helvetica", Arial, sans-serif;
+        margin-top: -50px;
+        margin-left: 80px;
+        font-size: 15px;
+        
+    }
+    
+    h3{
+        font-family: "Helvetica", Arial, sans-serif;
+        margin-top: -12px;
+        margin-left: 80px;
+        color: gray;
+    }
+    
+    p{
+        font-family: "Helvetica", Arial, sans-serif;
+        width: 70%;
+        margin-left: 13.5%;
+        margin-top: 6%;
+    
+    }
+    
+    .imgpost{
+    
+        margin-left: 13.5%;
+        width: 70%;
+        height: 70%;
+    }
+    
+    .imglike{
+        width: 7%;
+        height: 7%;
+        margin-left: 38%;
+        
+    }
+    
+    .numlike{
+        margin-left: 2%;
+        margin-top: 3%;
+    }
+    
+    .downpart{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    
+        
+    }
+    
+  }
